Update companies. Fixed some event listeners and subscribers
